# ChangeLog for dev-libs/glib
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.67 2004/04/19 22:48:52 avenj Exp $

  19 Apr 2004; Jon Portnoy <avenj@gentoo.org> glib-1.2.10-r5.ebuild :
  Call gnuconfig_update on AMD64 to fix AMD64 bootstrap breakage.
  See the comments in the ebuild and bug #47950 for more information.

  17 Apr 2004; Guy Martin <gmsoft@gentoo.org> glib-1.2.10-r5.ebuild:
  Added -fPIC to CFLAGS for hppa.

  14 Apr 2004; Stephen P. Becker <geoman@gentoo.org> glib-2.4.0.ebuild:
  Marked stable on mips.

  08 Apr 2004; Joshua Kinard <kumba@gentoo.org> glib-1.2.10-r5.ebuild,
  files/glib-1.2.10-gcc34-fix.patch:
  Added a patch to allow glibc-1.2.10-r5 compile under gcc-3.4.x. Closes Bug
  #47047.

  22 Mar 2004; foser <foser@gentoo.org> glib-2.4.0.ebuild :
  Fix a very dumb mistake by mixing up src_compile & src_install
  Thnx to joem on IRC for the notificiation
  Probably fixes #45205 & #45348

*glib-2.4.0 (18 Mar 2004)

  18 Mar 2004; foser <foser@gentoo.org> glib-2.4.0.ebuild :
  New minor release
  Minor ebuilds fixes, correct license

  05 Mar 2004; Tom Gall <tgall@gentoo.org> glib-2.2.3.ebuild:
  stable on ppc64

  04 Mar 2004; Brian Jackson <iggy@gentoo.org> glib-2.2.3.ebuild:
  add s390? around gtk-doc

  02 Jan 2004; Brad House <brad_mssw@gentoo.org> glib-1.2.10-r5.ebuild:
  elibtoolize appears to be broken now, manually run libtoolize

  28 Dec 2003; Joshua Kinard <kumba@gentoo.org> glib-2.2.3.ebuild:
  Move to mips stable (~mips -> mips)

  08 Nov 2003; Todd Sunderlin <todd@gentoo.org> glib-2.2.3.ebuild:
  added sparc keyword

  22 Oct 2003; Bartosch Pixa <darkspecter@gentoo.org> glib-2.2.3.ebuild:
  set ppc in keywords

  17 Oct 2003; Aron Griffis <agriffis@gentoo.org> glib-2.2.3.ebuild:
  Stable on alpha

  13 Oct 2003; Mike Gardiner <obz@gentoo.org> glib-2.2.1-r1.ebuild,
  glib-2.2.1.ebuild, glib-2.2.2.ebuild, glib-2.2.3.ebuild: