@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/glib
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.67 2004/04/19 22:48:52 avenj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.68 2004/04/24 03:28:24 agriffis Exp $
+
+  23 Apr 2004; Aron Griffis <agriffis@gentoo.org> glib-1.2.10-r5.ebuild:
+  Instead of being choosy about what arches to use -fPIC on, just use it on all
+  of them. This fixes bug 48839 (pam fails to build on ia64)
 
   19 Apr 2004; Jon Portnoy <avenj@gentoo.org> glib-1.2.10-r5.ebuild :
   Call gnuconfig_update on AMD64 to fix AMD64 bootstrap breakage.
